experimental/parser/testdata/parser/syntax/options.proto.stderr.txt
error: `syntax` declaration cannot specify compact options
  --> testdata/parser/syntax/options.proto:1:19
   |
 1 | syntax = "proto2" [(not.allowed) = "here"];
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^ help: remove this

encountered 1 error
